[metadata]
name = pybration
version = 0.1.0
author = TakemuraLab
url = http://fratelloworks.com
author_email = 7beim046@mail.u-tokai.ac.jp
description = Abcss relation libraries
long_description = file: README.md

[options]
install_requires = yapsy; pyqt5; pyqtchart; pandas; matplotlib; numpy; scipy; pyserial
zip_safe = False
packages = find:
entry_points = file: entry_points.cfg