[metadata]
name = pybration
version = 1.0.3
author = TakemuraLab
url = http://fratelloworks.com
author_email = 7beim046@mail.u-tokai.ac.jp
description = Abcss relation libraries
long_description = file: README.md

[options]
install_requires = yapsy; PyQt5==5.10.1; pyqtchart==5.10.1; pandas; matplotlib; numpy; scipy; pyserial; bson; pyserial;
zip_safe = False
packages = find:
entry_points = file: entry_points.cfg